Bug 287930 - Konqueror shows an empty page when using WebKit
Summary: Konqueror shows an empty page when using WebKit
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-30 18:00 UTC by Johannes Obermayr
Modified: 2011-12-17 08:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Obermayr 2011-11-30 18:00:40 UTC
Version:           unspecified (using Devel) 
OS:                Linux

-> www.westfalia.de

Switching to KHTML in Konqueror and the website is shown.

Reproducible: Always

Steps to Reproduce:
...


Expected Results:  
...
Comment 1 Blagovest Zlatev 2011-12-01 15:01:34 UTC
I reproduced the bug and I didn't find any duplicates.
Comment 2 Myriam Schweingruber 2011-12-07 14:36:36 UTC
Please have a look here about WebKit related bugs: http://trac.webkit.org/wiki/QtWebKitBugs
Comment 3 Dawit Alemayehu 2011-12-17 08:33:40 UTC
Git commit abfa18d847b7eb7a4206e4b851f14c0687b1c712 by Dawit Alemayehu.
Committed on 17/12/2011 at 09:23.
Pushed by adawit into branch 'KDE/4.7'.

- Do not emit readyRead when received data is empty.
- Treat ERR_SLAVE_DEFINED as warning and not error. This fixes
  empty page being shown when a supprious error is encountered
  by the KDE gzip filter during decompression.

BUG: 287930

M  +3    -1    kio/kio/accessmanagerreply_p.cpp

http://commits.kde.org/kdelibs/abfa18d847b7eb7a4206e4b851f14c0687b1c712