- Do not emit readyRead when received data is empty. - Treat ERR_SLAVE_DEFINED as warning and not error. This fixes   empty page being shown when a supprious error is encountered   by the KDE gzip filter during decompression.

BUG: 287930